@startuml

title __NETWORK's Class Diagram__\n

  package Portal.Network {
    class ReceivePort {
        {static} - LOGIN_DATA_PORT : int
        {static} - FILES_PORT : int
        {static} - password : int
        {static} + fileInputThread : Thread
        {static} + startLoginDataReceiver()
        {static} + generatePassword()
        {static} + getPassword()
    }
  }
  

  package Portal.Network {
    class LoginDataReceiver {
        + run()
    }
  }
  

  package Portal.Network {
    class FileDataReceiver {
        + run()
    }
  }
  

  package Portal.Network {
    class SendPort {
        {static} - LOGIN_DATA_PORT : int
        {static} - FILES_PORT : int
        {static} - IP : String
        {static} - fileBytes : FileBytes
        {static} + sendRequest()
        {static} + getLocalIP()
    }
  }
  

  package Portal.Network {
    class FileDataSender {
        + run()
    }
  }
  

  ReceivePort +-down- LoginDataReceiver
  ReceivePort +-down- FileDataReceiver
  LoginDataReceiver -up-|> Runnable
  FileDataReceiver -up-|> Runnable
  SendPort +-down- FileDataSender
  FileDataSender -up-|> Runnable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
